[project]
name = "rir-measurement-tool"
version = "0.1.0"
description = "A RIR measurement tool using sounddevice"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "scipy>=1.16.0",
    "sounddevice>=0.5.2",
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

